--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-imagemin": "^0.9.1",
-    "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-shell": "^1.1.1",
     "grunt-usemin": "^2.4.0",
     "serve": "~1.4.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "grunt-open": "~0.2.3",
+    "grunt-concurrent": "~1.0.0",
+    "load-grunt-tasks": "~1.0.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
+    "grunt-html-validation": "~0.1.18"
   }
 }
