--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   ],
   "license": "The MIT License (MIT)",
   "dependencies": {
-    "bower": "1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0"
@@ -36,6 +35,7 @@
     "grunt-concurrent": "~1.0.0",
     "load-grunt-tasks": "~1.0.0",
     "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-html-validation": "~0.1.18"
+    "grunt-html-validation": "~0.1.18",
+    "grunt-contrib-less": "~0.12.0"
   }
 }
