--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-htmlmin": "~0.3.0",
     "grunt-html-validation": "~0.1.18",
     "grunt-contrib-less": "~0.12.0",
-    "grunt-ngdocs": "~0.2.6"
+    "grunt-ngdocs": "~0.2.6",
+    "grunt-contrib-concat": "~0.5.0"
   }
 }
